# Dioxus

./: .gitignore  Cargo.toml  Dockerfile.frontend  Dockerfile.server  README.md  docker-compose.yml
dioxus-todo-app/: Cargo.toml  Dioxus.toml  index.html
dioxus-todo-app/src/: lib.rs  main.rs  models.rs  utils.rs
dioxus-todo-app/src/components/: auth_context.rs  layout.rs  mod.rs  todo_form.rs  todo_item.rs
dioxus-todo-app/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  todo_list.rs
server/: .env  Cargo.toml  db.sqlite  sqlx-data.json
server/.sqlx/: query-1ed301f5c018b8703fe8c3dfa56054c6a2aa305db6660bc6a883d76b25fcb066.json  query-2ae776da4efa1cbe9eef43641295312b98b24991c832369de10478f02f91827f.json  query-2d5cfaae2fce6e1541b31719596f69761b242fa6c4df3aa26d450cd574ad0607.json  query-2e465c3f5f3b3fb29f51cefabfab678ae2f60db0bfdbd437fb00618618b0ab5e.json  query-706c595b542f07a3efa89b886c8f36133564587be5340109f1d12a518fdaa40c.json  query-a5ec0838ea3990369cd1de5c841f784ea5f5c01330f1ad85db2b70636e88bd0e.json  query-e53f8b29ee50d9d3829fd64f5f5807ceab29cba80c1ee7d4b29200fc6e0d0eb6.json  query-f4a79882118bfd3df990684ace12d3586f4b75571db39ed23791f48835fe2d72.json
server/migrations/: 20240101000000_create_users_table.up.sql  20240101000001_create_todos_table.up.sql
server/src/: db.rs  errors.rs  main.rs  models.rs
server/src/handlers/: auth.rs  mod.rs  todos.rs
