[package]
name = "dioxus-todo-app"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
gloo-storage = "0.3"
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] } 