[package]
name = "dioxus-todo-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
web = []
default = []

[dependencies]
dioxus = { version = "0.5.6", features = ["web"] }
dioxus-router = "0.5.6"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
wasm-logger = "0.2.0"
gloo = "0.8.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
gloo-storage = "0.3"
chrono.workspace = true
log = "0.4"
dioxus-web = "0.5.6" 