[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "sqlite", "chrono", "uuid", "macros" ] }
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.86"
dotenvy = "0.15.7"
thiserror = "1.0.61"
futures = "0.3.30"
http = "1.1.0"
axum-macros = "0.4.1"
serde_json = "1.0.117"

[dependencies.reqwest]
version = "0.12.4"
features = ["json", "multipart"]
default-features = false 